--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,10 +13,9 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  gap: 16px;
-  align-items: center;
-  justify-content: flex-end;
-
+  padding: 8px;
+  justify-content: space-between;
+  height: 54px;
 }
 
 .profile-image {
@@ -25,7 +24,6 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
-  margin-right: 8px;
 }
 
 .logo {
@@ -33,7 +31,6 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  padding: 8px 0px 8px 8px;
 }
 
 button {
@@ -52,9 +49,23 @@ a {
 
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
   display: flex;
   gap: 16px;
-  margin-right: auto;
+  padding: 0px;
+  margin: 0px;
+}
+
+.head-left{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 16px;
+}
+
+.head-right{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: auto;
+  gap: 16px;
 }
