--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,21 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+
+.content{
+  margin: 0px;
+}
+
+.header{
+  font-weight: bold;
+  font-size: 18px;
+  display: flex;
+  margin-bottom: 8px;
+  align-items: center;
 }
 
 .icon {
@@ -33,6 +48,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -48,6 +64,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
 }
 
 button {
@@ -60,6 +77,10 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+}
+
+.text{
+  margin-bottom: 16px;
 }
 
 button.cancel {
