--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -23,5 +27,50 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
+  margin-top: 8px;
+}
+
+ul{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none; 
+  color: #666; 
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.header .left-links,
+.header .right-links,
+.footer .left-links,
+.footer .right-links{
+  display: flex;
+  gap: 16px;
+}
+
+.header,
+.footer{
+  display: flex;
+  padding-right: 16px;
+}
+
+
+ 
+.header .left-links,
+.footer .left-links{
+  margin-right: auto;
+  padding-left: 16px;
+}
+
+.footer{
+  background-color: #eee;
+  
 }
