--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,72 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+}
+
+.header h1{
+  margin: 0px;
+  margin-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-top: auto;
+     this is not needed if the item above it has a proper flex grow property */
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;  
+}
+
+.content{
+  display: flex;
+  flex: 1 1 0px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  margin: 16px;
+  padding: 16px;
+}
+
+.cardcontent{
+  display: flex;
+  padding: 32px;
+  flex-wrap: wrap;
+}
+
+ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  font-size: 24px;
+  padding: 16px;
+  margin: 0px;
+}
+
+a{
+  text-decoration: none; 
+  color: #fff; 
 }
